# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[project]
name = 'nanoarrow-python-demo'
dynamic = ['version']  # gets version from build backend
description = "Sample Python package using nanoarrow"

[build-system]
requires = ['meson-python', 'meson']
build-backend= 'mesonpy'

[tool.meson-python.args]
# We are going to statically link any subprojects in our Meson configuration
# so no need to try and install them. You may need to customize this if you
# do have shared libraries that you want to install into your Python wheel
install = ['--skip-subprojects']
